plugins {
    id 'java-library'
}

apply from: "${rootProject.rootDir}/gradle/tests.gradle"
apply from: "${rootProject.rootDir}/gradle/publishing.gradle"

group = 'com.inomera.telco.commons'
version = project.file('VERSION').text.trim()
sourceCompatibility = JavaVersion.VERSION_23
targetCompatibility = JavaVersion.VERSION_23

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    testImplementation {
        extendsFrom compileOnly
    }
}

dependencies {
    api 'org.springframework:spring-core:6.2.1'
    api 'org.springframework:spring-context:6.2.1'
    api "com.inomera.telco.commons:lang:${versions.lang}"
    api "org.apache.kafka:kafka-clients:${versions.kafka_clients}"

    implementation "org.apache.commons:commons-lang3:${versions.commons_lang3}"
    implementation "org.slf4j:slf4j-api:${versions.slf4j}"

    implementation "org.projectlombok:lombok:${versions.lombok}"
    annotationProcessor "org.projectlombok:lombok:${versions.lombok}"
    testAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${versions.jupiter}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${versions.jupiter}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${versions.jupiter}"
    testImplementation "org.mockito:mockito-core:${versions.mockito_core}"
    testImplementation "org.mockito:mockito-junit-jupiter:${versions.mockito_jupiter}"
    testImplementation "org.hamcrest:hamcrest:${versions.hamcrest}"
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = "${project.group}"
            artifactId = "${project.name}"
            version = "${project.version}"

            from components.java
            artifact tasks.sourceJar
        }
    }
}

tasks.generatePomFileForMavenJavaPublication {
    destination = file("${project.projectDir}/build/publications/mavenJava/${project.name}-${project.version}.pom")
}